--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "express": "^4.19.2",
     "framer-motion": "^10.18.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
